# dotfiles

./: .gitignore  .gitignroe  ideavimrc  linker.sh  zprofile  zshrc
.agents/skills/gh-work-item-implementer/assets/: context.schema.json
agents/: AGENTS.md
agents/skills/: superpowers
agents/skills/gh-work-item-implementer/: SKILL.md
agents/skills/grill-to-pr-loop/: SKILL.md
agents/skills/llm-wiki/: SKILL.md
agents/skills/python-setup-with-uv/: SKILL.md
agents/skills/review-fix-loop/: SKILL.md
codex/: .gitignore  AGENTS.md  config.toml  models_cache.json  version.json
codex/policy/: default.codexpolicy
codex/rules/: default.rules
codex/scripts/: wt.sh
codex/skills/: README.md
codex/skills/epic-subissue-runner/: SKILL.md
codex/skills/publish-chat-epic/: SKILL.md
docs/plans/: 2026-03-14-gh-work-item-closure-guard-design.md  2026-03-14-gh-work-item-closure-guard.md
git/: gitconfig  gitignore_global
scripts/: clip_board.py  codex-worktree
scripts/codex-worktree-kit/: README.md  pyproject.toml
scripts/codex-worktree-kit/codex_worktree/: __init__.py  bootstrap.py  branching.py  cli.py  config.py  create_worktree.py  errors.py  git_ops.py  repo_resolution.py  symlink_ops.py
scripts/codex-worktree-kit/examples/: backend.create-worktree.toml  backend.worktree.toml  web.create-worktree.toml  web.worktree.toml
scripts/codex-worktree-kit/tests/: test_bin_scripts.py  test_bootstrap_plan.py  test_create_worktree.py  test_repo_resolution.py  test_validate_config.py
skills/python-setup-with-uv/: SKILL.md
vim/: .netrwhist  vimrc
(+41 files in other folders)
